--- a/index.html
+++ b/index.html
@@ -132,9 +132,6 @@
       <img src="assets/images/footer/logo.svg" alt="">
     </footer>
     
-    <script type="module" src="assets/js/main.js"></script>
-    <script>
-      
-    </script>
+    <script defer type="module" src="assets/js/main.js"></script>
   </body>
 </html>
